# Distributed_LLM

./: .gitignore  LICENSE  README.md  distributed_llama32.py  distributed_llama32_opt.py  llama32_precise_measure.py  load_model_monkey_patch.py  load_models_gemma3.py  load_models_llama32.py  load_models_llama32_QA.py  local_llama32.py  pyproject.toml  requirements.txt  run_local.sh
edgecolab/: README.md  __init__.py  __main__.py  edgecolab.py  example_local_stage.py  local_ring.py  run_device.py  transport.py  utils.py
edgecolab/adapters/: __init__.py  base.py  llama_family.py
edgecolab/runners/: __init__.py  base_runner.py  llama_runner.py
edgecolab/runtime/: __init__.py  pipeline.py
previous_implementations/: distributed_llama32_local.py  distributed_llama32_opt.py
previous_implementations/source_ref/: configuration_llama.py  modeling_llama.py
previous_implementations/test_results/: single_log.txt
