[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecolab"
version = "0.1.0"
description = "Cross-device distributed inference scaffold for Llama-like models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Distributed_LLM contributors" }]
dependencies = [
  "torch>=2.1",
  "transformers>=4.44",
  "huggingface_hub>=0.24",
  "psutil>=5.9",
]

[project.scripts]
edgecolab = "edgecolab.edgecolab:main"
edgecolab-local-ring = "edgecolab.local_ring:main"
edgecolab-example = "edgecolab.example_local_stage:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["edgecolab*"]
